// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal-Dialog Matches snapshot (closed) 1`] = `
.c0 {
  box-sizing: border-box;
  position: fixed;
  z-index: 100000;
  bottom: var(--spacing-2x);
  right: var(--spacing-2x);
}

<body
  class=""
  style="overflow: unset;"
>
  <div />
  <div
    class="c0"
    data-testid="toasts"
  />
  <div
    class="ReactModalPortal"
  />
</body>
`;

exports[`Modal-Dialog Matches snapshot (custom button labels) 1`] = `
.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c9:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c9:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c9 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-1halfx);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-1halfx);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c13:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c13:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c13 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c14 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
  min-width: var(--size-1halfx);
  padding: 0;
  width: var(--size-1halfx);
}

.c14:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c14:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c14:hover,
.c14[aria-expanded='true'] {
  background-color: #DBDEE1;
  border-color: transparent;
  color: #1B1C1E;
}

.c14:disabled {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
}

.c14 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c0 {
  box-sizing: border-box;
  position: fixed;
  z-index: 100000;
  bottom: var(--spacing-2x);
  right: var(--spacing-2x);
}

.c10 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
}

.c10:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c10:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c10:hover,
.c10[aria-expanded='true'] {
  background-color: #DBDEE1;
  border-color: transparent;
  color: #1B1C1E;
}

.c10:disabled {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
}

.c11 {
  background-color: #006296;
  border-color: #006296;
  color: #FFFFFF;
}

.c11:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c11:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c11:hover,
.c11[aria-expanded='true'] {
  background-color: #003A5A;
  border-color: #003A5A;
  color: #FFFFFF;
}

.c11:disabled {
  background-color: #84C6EA;
  border-color: #84C6EA;
  color: #FFFFFF;
}

.c3 {
  color: #000000;
  font-size: 1.25rem;
  font-weight: var(--font-normal);
  line-height: 2rem;
  margin: 0;
}

.c1 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius-2x);
  box-shadow: 0 6px 10px 0 rgb(0 0 0 / 10%);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: calc(100vh - var(--spacing-2x));
  max-width: 700px;
  min-width: calc(480px - var(--spacing-4x));
  position: relative;
  width: 60vw;
}

.c1::after {
  content: '';
  display: block;
  padding-bottom: var(--spacing-4x);
}

.c1:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c1:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c6 {
  max-height: 100%;
  overflow-y: auto;
  padding: var(--spacing-3x) var(--spacing-4x) 0;
}

.c2 {
  border-bottom: 1px solid transparent;
  padding: var(--spacing-3x) var(--spacing-4x) var(--spacing-2x);
}

.c2 + .c5 {
  padding-top: 0;
}

.c15 {
  position: absolute;
  right: var(--spacing-4x);
  top: 1.75rem;
}

.c7 {
  border-top: 1px solid transparent;
  padding: var(--spacing-4x) var(--spacing-4x) 0;
}

.c4 {
  font-size: 1rem;
  font-weight: var(--font-normal);
  line-height: 1.375rem;
  margin: var(--spacing-3x) 0 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: unset;
  -ms-flex-direction: unset;
  flex-direction: unset;
  -webkit-box-pack: end;
  -webkit-justify-content: end;
  -ms-flex-pack: end;
  justify-content: end;
}

.c12 {
  margin-left: var(--spacing-1x);
  margin-top: 0;
}

<body
  class="ReactModal__Body--open"
  style="overflow: hidden;"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div />
  <div
    class="c0"
    data-testid="toasts"
  />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  >
    <div
      class="ReactModal__Overlay"
      style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(0, 0, 0, 0.75); align-items: center; display: flex; justify-content: center; z-index: 10000;"
    >
      <div
        aria-describedby="modal-description"
        aria-labelledby="uuid1"
        aria-modal="true"
        class="ReactModal__Content c1 "
        role="dialog"
        tabindex="-1"
      >
        <header
          class="c2"
        >
          <h2
            class="c3"
            id="uuid1"
          >
            Title
          </h2>
          <h3
            class="c4"
          >
            Subtitle
          </h3>
        </header>
        <main
          class="c5 c6"
        >
          <p
            id="modal-description"
          >
            Test Content
          </p>
        </main>
        <footer
          class="c7"
        >
          <div
            class="c8"
          >
            <button
              class="c9 c10 "
              data-testid="cancel-button"
              type="button"
            >
              Test Cancel
            </button>
            <button
              class="c9 c11 c12"
              data-testid="confirm-button"
              type="button"
            >
              Test Confirm
            </button>
          </div>
        </footer>
        <button
          aria-label="Close dialog"
          class="c13 c14 c15"
          data-testid="close-button"
          type="button"
        >
          <svg
            aria-hidden="true"
            color="currentColor"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Modal-Dialog Matches snapshot (custom footer content) 1`] = `
.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-1halfx);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-1halfx);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c7:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c7:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c7 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c8 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
  min-width: var(--size-1halfx);
  padding: 0;
  width: var(--size-1halfx);
}

.c8:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c8:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c8:hover,
.c8[aria-expanded='true'] {
  background-color: #DBDEE1;
  border-color: transparent;
  color: #1B1C1E;
}

.c8:disabled {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
}

.c8 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c0 {
  box-sizing: border-box;
  position: fixed;
  z-index: 100000;
  bottom: var(--spacing-2x);
  right: var(--spacing-2x);
}

.c3 {
  color: #000000;
  font-size: 1.25rem;
  font-weight: var(--font-normal);
  line-height: 2rem;
  margin: 0;
}

.c1 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius-2x);
  box-shadow: 0 6px 10px 0 rgb(0 0 0 / 10%);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: calc(100vh - var(--spacing-2x));
  max-width: 700px;
  min-width: calc(480px - var(--spacing-4x));
  position: relative;
  width: 60vw;
}

.c1::after {
  content: '';
  display: block;
  padding-bottom: var(--spacing-4x);
}

.c1:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c1:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c5 {
  max-height: 100%;
  overflow-y: auto;
  padding: var(--spacing-3x) var(--spacing-4x) 0;
}

.c2 {
  border-bottom: 1px solid transparent;
  padding: var(--spacing-3x) var(--spacing-4x) var(--spacing-2x);
}

.c2 + .c4 {
  padding-top: 0;
}

.c9 {
  position: absolute;
  right: var(--spacing-4x);
  top: 1.75rem;
}

.c6 {
  border-top: 1px solid transparent;
  padding: var(--spacing-4x) var(--spacing-4x) 0;
}

<body
  class="ReactModal__Body--open"
  style="overflow: hidden;"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div />
  <div
    class="c0"
    data-testid="toasts"
  />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  >
    <div
      class="ReactModal__Overlay"
      style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(0, 0, 0, 0.75); align-items: center; display: flex; justify-content: center; z-index: 10000;"
    >
      <div
        aria-describedby="modal-description"
        aria-labelledby="uuid1"
        aria-modal="true"
        class="ReactModal__Content c1 "
        role="dialog"
        tabindex="-1"
      >
        <header
          class="c2"
        >
          <h2
            class="c3"
            id="uuid1"
          >
            Title
          </h2>
        </header>
        <main
          class="c4 c5"
        >
          <p
            id="modal-description"
          >
            Test Content
          </p>
        </main>
        <footer
          class="c6"
        >
          <p>
            Custom content
          </p>
        </footer>
        <button
          aria-label="Close dialog"
          class="c7 c8 c9"
          data-testid="close-button"
          type="button"
        >
          <svg
            aria-hidden="true"
            color="currentColor"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Modal-Dialog Matches snapshot (only subtitle) 1`] = `
.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c9:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c9:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c9 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-1halfx);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-1halfx);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c13:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c13:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c13 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c14 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
  min-width: var(--size-1halfx);
  padding: 0;
  width: var(--size-1halfx);
}

.c14:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c14:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c14:hover,
.c14[aria-expanded='true'] {
  background-color: #DBDEE1;
  border-color: transparent;
  color: #1B1C1E;
}

.c14:disabled {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
}

.c14 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c0 {
  box-sizing: border-box;
  position: fixed;
  z-index: 100000;
  bottom: var(--spacing-2x);
  right: var(--spacing-2x);
}

.c10 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
}

.c10:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c10:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c10:hover,
.c10[aria-expanded='true'] {
  background-color: #DBDEE1;
  border-color: transparent;
  color: #1B1C1E;
}

.c10:disabled {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
}

.c11 {
  background-color: #006296;
  border-color: #006296;
  color: #FFFFFF;
}

.c11:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c11:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c11:hover,
.c11[aria-expanded='true'] {
  background-color: #003A5A;
  border-color: #003A5A;
  color: #FFFFFF;
}

.c11:disabled {
  background-color: #84C6EA;
  border-color: #84C6EA;
  color: #FFFFFF;
}

.c3 {
  color: #000000;
  font-size: 1.25rem;
  font-weight: var(--font-normal);
  line-height: 2rem;
  margin: 0;
}

.c1 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius-2x);
  box-shadow: 0 6px 10px 0 rgb(0 0 0 / 10%);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: calc(100vh - var(--spacing-2x));
  max-width: 700px;
  min-width: calc(480px - var(--spacing-4x));
  position: relative;
  width: 60vw;
}

.c1::after {
  content: '';
  display: block;
  padding-bottom: var(--spacing-4x);
}

.c1:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c1:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c6 {
  max-height: 100%;
  overflow-y: auto;
  padding: var(--spacing-3x) var(--spacing-4x) 0;
}

.c2 {
  border-bottom: 1px solid transparent;
  padding: var(--spacing-3x) var(--spacing-4x) var(--spacing-2x);
}

.c2 + .c5 {
  padding-top: 0;
}

.c15 {
  position: absolute;
  right: var(--spacing-4x);
  top: 1.75rem;
}

.c7 {
  border-top: 1px solid transparent;
  padding: var(--spacing-4x) var(--spacing-4x) 0;
}

.c4 {
  font-size: 1rem;
  font-weight: var(--font-normal);
  line-height: 1.375rem;
  margin: var(--spacing-3x) 0 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: unset;
  -ms-flex-direction: unset;
  flex-direction: unset;
  -webkit-box-pack: end;
  -webkit-justify-content: end;
  -ms-flex-pack: end;
  justify-content: end;
}

.c12 {
  margin-left: var(--spacing-1x);
  margin-top: 0;
}

<body
  class="ReactModal__Body--open"
  style="overflow: hidden;"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div />
  <div
    class="c0"
    data-testid="toasts"
  />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  >
    <div
      class="ReactModal__Overlay"
      style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(0, 0, 0, 0.75); align-items: center; display: flex; justify-content: center; z-index: 10000;"
    >
      <div
        aria-describedby="modal-description"
        aria-labelledby="uuid1"
        aria-modal="true"
        class="ReactModal__Content c1 "
        role="dialog"
        tabindex="-1"
      >
        <header
          class="c2"
        >
          <h2
            class="c3"
            id="uuid1"
          >
            Title
          </h2>
          <h3
            class="c4"
          >
            Subtitle
          </h3>
        </header>
        <main
          class="c5 c6"
        >
          <p
            id="modal-description"
          >
            Test Content
          </p>
        </main>
        <footer
          class="c7"
        >
          <div
            class="c8"
          >
            <button
              class="c9 c10 "
              data-testid="cancel-button"
              type="button"
            >
              Cancel
            </button>
            <button
              class="c9 c11 c12"
              data-testid="confirm-button"
              type="button"
            >
              Confirm
            </button>
          </div>
        </footer>
        <button
          aria-label="Close dialog"
          class="c13 c14 c15"
          data-testid="close-button"
          type="button"
        >
          <svg
            aria-hidden="true"
            color="currentColor"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Modal-Dialog Matches snapshot (opened, desktop) 1`] = `
.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c9:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c9:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c9 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-1halfx);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-1halfx);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c13:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c13:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c13 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c14 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
  min-width: var(--size-1halfx);
  padding: 0;
  width: var(--size-1halfx);
}

.c14:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c14:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c14:hover,
.c14[aria-expanded='true'] {
  background-color: #DBDEE1;
  border-color: transparent;
  color: #1B1C1E;
}

.c14:disabled {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
}

.c14 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c0 {
  box-sizing: border-box;
  position: fixed;
  z-index: 100000;
  bottom: var(--spacing-2x);
  right: var(--spacing-2x);
}

.c10 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
}

.c10:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c10:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c10:hover,
.c10[aria-expanded='true'] {
  background-color: #DBDEE1;
  border-color: transparent;
  color: #1B1C1E;
}

.c10:disabled {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
}

.c11 {
  background-color: #006296;
  border-color: #006296;
  color: #FFFFFF;
}

.c11:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c11:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c11:hover,
.c11[aria-expanded='true'] {
  background-color: #003A5A;
  border-color: #003A5A;
  color: #FFFFFF;
}

.c11:disabled {
  background-color: #84C6EA;
  border-color: #84C6EA;
  color: #FFFFFF;
}

.c3 {
  color: #000000;
  font-size: 1.25rem;
  font-weight: var(--font-normal);
  line-height: 2rem;
  margin: 0;
}

.c1 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius-2x);
  box-shadow: 0 6px 10px 0 rgb(0 0 0 / 10%);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: calc(100vh - var(--spacing-2x));
  max-width: 700px;
  min-width: calc(480px - var(--spacing-4x));
  position: relative;
  width: 60vw;
}

.c1::after {
  content: '';
  display: block;
  padding-bottom: var(--spacing-4x);
}

.c1:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c1:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c6 {
  max-height: 100%;
  overflow-y: auto;
  padding: var(--spacing-3x) var(--spacing-4x) 0;
}

.c2 {
  border-bottom: 1px solid transparent;
  padding: var(--spacing-3x) var(--spacing-4x) var(--spacing-2x);
}

.c2 + .c5 {
  padding-top: 0;
}

.c15 {
  position: absolute;
  right: var(--spacing-4x);
  top: 1.75rem;
}

.c7 {
  border-top: 1px solid transparent;
  padding: var(--spacing-4x) var(--spacing-4x) 0;
}

.c4 {
  font-size: 1rem;
  font-weight: var(--font-normal);
  line-height: 1.375rem;
  margin: var(--spacing-3x) 0 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: unset;
  -ms-flex-direction: unset;
  flex-direction: unset;
  -webkit-box-pack: end;
  -webkit-justify-content: end;
  -ms-flex-pack: end;
  justify-content: end;
}

.c12 {
  margin-left: var(--spacing-1x);
  margin-top: 0;
}

<body
  class="ReactModal__Body--open"
  style="overflow: hidden;"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div />
  <div
    class="c0"
    data-testid="toasts"
  />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  >
    <div
      class="ReactModal__Overlay"
      style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(0, 0, 0, 0.75); align-items: center; display: flex; justify-content: center; z-index: 10000;"
    >
      <div
        aria-describedby="modal-description"
        aria-labelledby="uuid1"
        aria-modal="true"
        class="ReactModal__Content c1 "
        role="dialog"
        tabindex="-1"
      >
        <header
          class="c2"
        >
          <h2
            class="c3"
            id="uuid1"
          >
            Title
          </h2>
          <h3
            class="c4"
          >
            Subtitle
          </h3>
        </header>
        <main
          class="c5 c6"
        >
          <p
            id="modal-description"
          >
            Test Content
          </p>
        </main>
        <footer
          class="c7"
        >
          <div
            class="c8"
          >
            <button
              class="c9 c10 "
              data-testid="cancel-button"
              type="button"
            >
              Cancel
            </button>
            <button
              class="c9 c11 c12"
              data-testid="confirm-button"
              type="button"
            >
              Confirm
            </button>
          </div>
        </footer>
        <button
          aria-label="Close dialog"
          class="c13 c14 c15"
          data-testid="close-button"
          type="button"
        >
          <svg
            aria-hidden="true"
            color="currentColor"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Modal-Dialog Matches snapshot (opened, mobile) 1`] = `
.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.033125rem;
  -moz-letter-spacing: 0.033125rem;
  -ms-letter-spacing: 0.033125rem;
  letter-spacing: 0.033125rem;
  line-height: 1.5rem;
  min-height: var(--size-3x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-3x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c9:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c9:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c9 > svg {
  color: inherit;
  height: var(--size-1halfx);
  width: var(--size-1halfx);
}

.c13 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
  padding: 0;
  width: var(--size-3x);
}

.c13:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c13:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c13:hover,
.c13[aria-expanded='true'] {
  background-color: #DBDEE1;
  border-color: transparent;
  color: #1B1C1E;
}

.c13:disabled {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
}

.c13 > svg {
  height: var(--size-1halfx);
  width: var(--size-1halfx);
}

.c0 {
  box-sizing: border-box;
  position: fixed;
  z-index: 100000;
  bottom: var(--spacing-2x);
  right: 0;
}

.c10 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
}

.c10:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c10:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c10:hover,
.c10[aria-expanded='true'] {
  background-color: #DBDEE1;
  border-color: transparent;
  color: #1B1C1E;
}

.c10:disabled {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
}

.c11 {
  background-color: #006296;
  border-color: #006296;
  color: #FFFFFF;
}

.c11:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c11:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c11:hover,
.c11[aria-expanded='true'] {
  background-color: #003A5A;
  border-color: #003A5A;
  color: #FFFFFF;
}

.c11:disabled {
  background-color: #84C6EA;
  border-color: #84C6EA;
  color: #FFFFFF;
}

.c3 {
  color: #000000;
  font-size: 1.25rem;
  font-weight: var(--font-normal);
  line-height: 2rem;
  margin: 0;
}

.c1 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius-2x);
  box-shadow: 0 6px 10px 0 rgb(0 0 0 / 10%);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: calc(100vh - var(--spacing-2x));
  max-width: 700px;
  min-width: initial;
  position: relative;
  width: calc(100vw - var(--spacing-2x));
}

.c1::after {
  content: '';
  display: block;
  padding-bottom: var(--spacing-2x);
}

.c1:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c1:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c6 {
  max-height: 100%;
  overflow-y: auto;
  padding: var(--spacing-2x) var(--spacing-2x) 0;
}

.c2 {
  border-bottom: 1px solid transparent;
  padding: var(--spacing-2x) var(--spacing-2x) var(--spacing-2x);
}

.c2 + .c5 {
  padding-top: 0;
}

.c14 {
  position: absolute;
  right: var(--spacing-half);
  top: 1.75rem;
}

.c7 {
  border-top: 1px solid transparent;
  padding: var(--spacing-4x) var(--spacing-2x) 0;
}

.c4 {
  font-size: 1.125rem;
  font-weight: var(--font-normal);
  line-height: 1.75rem;
  margin: var(--spacing-3x) 0 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: end;
  -ms-flex-pack: end;
  justify-content: end;
}

.c12 {
  margin-left: 0;
  margin-top: var(--spacing-1x);
}

<body
  class="ReactModal__Body--open"
  style="overflow: hidden;"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div />
  <div
    class="c0"
    data-testid="toasts"
  />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  >
    <div
      class="ReactModal__Overlay"
      style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(0, 0, 0, 0.75); align-items: center; display: flex; justify-content: center; z-index: 10000;"
    >
      <div
        aria-describedby="modal-description"
        aria-labelledby="uuid1"
        aria-modal="true"
        class="ReactModal__Content c1 "
        role="dialog"
        tabindex="-1"
      >
        <header
          class="c2"
        >
          <h2
            class="c3"
            id="uuid1"
          >
            Title
          </h2>
          <h3
            class="c4"
          >
            Subtitle
          </h3>
        </header>
        <main
          class="c5 c6"
        >
          <p
            id="modal-description"
          >
            Test Content
          </p>
        </main>
        <footer
          class="c7"
        >
          <div
            class="c8"
          >
            <button
              class="c9 c10 "
              data-testid="cancel-button"
              type="button"
            >
              Cancel
            </button>
            <button
              class="c9 c11 c12"
              data-testid="confirm-button"
              type="button"
            >
              Confirm
            </button>
          </div>
        </footer>
        <button
          aria-label="Close dialog"
          class="c9 c13 c14"
          data-testid="close-button"
          type="button"
        >
          <svg
            aria-hidden="true"
            color="currentColor"
            focusable="false"
            height="24"
            width="24"
          />
        </button>
      </div>
    </div>
  </div>
</body>
`;
